# matchmaker-orchestrator

./: .gitignore  Cargo.toml  GEMINI.md  README.md
.github/workflows/: release.yml
.sqlx/: query-8d6fdcf137698da2d3afe927f530eae402d43762b9650f59240f89a8b542cda8.json  query-91178f2e4bfe574c4722afabf8936cb98b064182286ae83a2851575506189b96.json  query-930858bafc56127b03bfe924871e059c560fad3469e10c0d115ab102dc9211cb.json  query-9d82f764d6525fa0204976fc26b7eae75483b282553c73cebfcc577ebf8b2994.json  query-b2761eb959eed12169ee1f5213c35b54affb4407533cac49f78339aab6b4d190.json  query-ba63a202b92660f535e626f97f99bcee87f1e4bcc5193cef577e518b7210b328.json  query-be69a2ccaeec4bb5875ac014f79c15d7e9aa9651db0af799f7a41491b1f52086.json  query-db9777cd1cb2d644388d0a14187964b3a9a98fb7ea78b9b209b71ea66f904949.json  query-e7aa0652c80d795166a42c8e55ec9e18f8e99f869f233897da32c2b526e20366.json
context/: changelog_20260128.md  changelog_20260205.md  critique.md  llm_cost_analysis.md  plan_auth_implementation.md  plan_concurrency_fix.md  plan_project_ingestion.md  plan_secure_webhooks.md  plan_sponsor_ingestion.md  plan_term_tracking.md  plan_testing_strategy.md  plan_trust_test.md  project.md  refactoring_log_202601271412.md  revert_secure_webhooks.sql  todos.md  trust-test.md
src/: analysis_request_components.rs  auth.rs  main.rs  requests.rs  resume_schema.json  service.rs
src/analysis_request_components/: date_format.rs  supabase.rs
src/requests/: openai.rs  supabase.rs
test-project-sheets/: Intern Project Sample.csv  Intern Project Sample.xlsx  test_projects.csv  test_projects.xlsx  test_projects_broken.xlsx
