[package]
name = "matchmaker-orchestrator"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["http2", "macros", "ws"] }
dotenvy = "0.15.7"
pdf-extract = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
supabase-lib-rs = "0.5.3"
tokio = { version = "1.48.0", features = ["full"] }
serde_json = "1.0.145"
reqwest = { version = "0.12.25", features = ["json"] }
tracing = "0.1.43"
tracing-subscriber = {version = "0.3.22", features = ["env-filter", "json"]}
tower-http = {version = "0.6.8", features = ["trace"]}
sqlx = { version = "0.8.6", features = ["postgres", "macros", "runtime-tokio", "uuid"] }
uuid = { version = "1.19.0", features = ["v4"] }
