[package]
name = "matchmaker-orchestrator"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["http2", "macros", "ws"] }
dotenvy = "0.15.7"
pdf-extract = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
supabase-lib-rs = "0.5.3"
tokio = { version = "1.49.0", features = ["full"] }
serde_json = "1.0.149"
reqwest = { version = "0.13.1", features = ["json"] }
tracing = "0.1.44"
tracing-subscriber = {version = "0.3.22", features = ["env-filter", "json"]}
tower-http = {version = "0.6.8", features = ["trace"]}
sqlx = { version = "0.8.6", features = ["postgres", "macros", "runtime-tokio", "uuid"] }
uuid = { version = "1.20.0", features = ["v4"] }
zip = { version = "7.2.0", default-features = false, features = ["deflate"] }
tempfile = "3.24.0"
anyhow = "1.0.100"
